fix all back button alignment & background image
* fix all  details icon

* fix all  details icon

* fix all back button alignment & background image

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,7 @@ body {
     font-weight: 300;
     width: 100%;
     text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.05);
-    background-image: url(../../vendors/img/background3.png);
+    background-image: url(/img/background3.png);
 }
 
 ul {
@@ -113,6 +113,7 @@ a:hover {
 .button-green {
     background: #1fa08e;
     color: #ffffff;
+    margin-right: 15px;
 }
 
 .button-green:hover {
@@ -142,11 +143,14 @@ a:hover {
 }
 
 .next-btn {
-    margin-left: 12%;
+    position: relative;
+    bottom: -30px;
+    left: 120px;
 }
 
 .back-btn {
-    margin-top: -9%;
+    position: relative;
+    bottom: 20px;
 }
 
 
@@ -257,7 +261,7 @@ label {
 }
 
 .panel-body {
-    background-image: url(../../vendors/img/background1.png);
+    background-image: url(/img/background1.png);
 }
 
 
